# fith

./: Makefile  README.md  fire_gs.glsl  fire_vs.glsl  fragment.glsl  geometry.glsl  main.cpp  meson.build  object_fs.glsl  object_vs.glsl  particle.hh  particle_effect.cpp  particle_effect.hh  program.cpp  program.hh  vertex.glsl
includes/: fire_effect.hh  flame_effect.hh  image.hh  matrix.hh  obj_loader.hh  particle.hh  particle_effect.hh  particle_emitter.hh  particle_system.hh  program.hh  random.hh  smoke_effect.hh  spark_effect.hh
src/: fire_effect.cpp  flame_effect.cpp  main.cpp  matrix.cpp  meson.build  obj_loader.cpp  particle_effect.cpp  particle_system.cpp  program.cpp  random.cpp  smoke_effect.cpp  spark_effect.cpp
textures/: lighting.tga  red_glow_tr.tga  reddish.tga  sparks.tga  white_glow_tr.tga
